# ros_smart_template

./: CMakeLists.txt  README.md  package.xml
docs/: INSTALL.md  bbb-wifi.md
scripts/: st_command_listner.py  st_config_service.py  st_core.py  st_kinematics.py  st_watchdog.py
srv/: ForwardKinematics.srv  GetCalibration.srv  InverseKinematics.srv  SetCalibration.srv  SetTarget.srv
