<?xml version="1.0"?>
<package format="2">
  <name>ros_smart_template</name>
  <version>0.0.0</version>
  <description>Controller for Smart Template</description>

  <maintainer email="tokuda@bwh.harvard.edu">Junichi Tokuda</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ros_smart_template</url> -->
  <url type="website">https://github.com/i3-lab/ros_smart_template</url>

  <author email="tokuda@bwh.harvard.edu">Junichi Tokuda</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
